# periodicity-detection

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  test-pr.yml
docs/: conf.py  index.rst
periodicity_detection/methods/: findfrequency.py
